<resources>
    <string name="app_name">Page Object Injection sample</string>
    <string name="do_you_agree_to_terms_and_conditions">Do you agree to terms and conditions?</string>
    <string name="validate_and_go_next">Validate and go next</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="please_agree_to_terms">Please agree to terms and conditions</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
</resources>
