<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />
    </android.support.design.widget.TextInputLayout>


    <CheckedTextView
        android:id="@+id/terms_and_conditions_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkMark="?android:listChoiceIndicatorMultiple"
        android:checked="true"
        android:gravity="center_vertical"
        android:text="@string/do_you_agree_to_terms_and_conditions" />

    <Button
        android:id="@+id/login_button"
        android:onClick="onLoginClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_and_go_next" />

</android.support.v7.widget.LinearLayoutCompat>
